2004-03-23  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Fix GNU ld check.

2004-03-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Use amd64 instead of x86-64 as directory name. Fixes
	#55840.
	
	* configure.in: Disable -version-script if not using GNU ld. Fixes
	#55910.

	* configure.in: Speedup successful sigaltstack test.

2004-03-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: this test for sigaltstack works.

2004-03-20  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Disable sigaltstack test for now since it can hang.
	
	* configure.in: Add test for working sigaltstack.
2004-03-16  Duncan Mak  <duncan@ximian.com>

	* runtime/Makefile.am
	(MakeCert.exe, cert2spc.exe, certmgr.exe, setreg.exe):
	Remember to install them to mono/runtime.

2004-03-14  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Enable JIT on sparc.

2004-03-13  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* data/config.in: Changed libgtkhtml-3.0.so.2 to libgtkhtml-3.0.so to fix
	breakage with gtkhtml-3.0.10

2004-03-10  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add a --with-sigaltstack option for platforms
	where the sigaltstack based exception handling does not work.

2004-03-08  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in acconfig.h: Add check for aintl function, which is the
	solaris equivalent of truncl.

2004-02-29  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add check for GC_enable.
	
	* configure.in: Remove amd64/Makefile from AC_OUTPUT to fix build.

2004-02-19  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add proper support for --with-nptl for people who
	have linking problems when it is enabled.

2004-02-18  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add test for __thread keyword and shared libs.

2004-02-16  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Enable --with-nptl by default.

2004-02-03  Zoltan Varga  <vargaz@freemail.hu>
