@@ -7,6 +7,7 @@
  * (C) 2004 Novell (http://www.novell.com)
  */
 
+#include <config.h>
 #include <mono/io-layer/io-layer.h>
 
 #include <pwd.h>
@@ -15,18 +16,31 @@
 #include <unistd.h>
 
 
-extern gboolean GetUserName (gchar *buffer, gint32 *size) 
+gboolean
+GetUserName (gchar *buffer, gint32 *size) 
 {
+#ifdef HAVE_GETPWUID_R
+	struct passwd *pbuf;
+	size_t fbufsize;
+	gchar *fbuf;
+#endif
 	struct passwd *p;
 	uid_t uid;
 
 	if (!size) {
 		SetLastError (ERROR_INVALID_PARAMETER);
-		return 0;
+		return FALSE;
 	}
 
 	uid = getuid ();
+#ifdef HAVE_GETPWUID_R
+	fbufsize = (size_t) sysconf (_SC_GETPW_R_SIZE_MAX);
+	fbuf = g_malloc0 (fbufsize);
+	pbuf = g_new0 (struct passwd, 1);
+	getpwuid_r (uid, pbuf, fbuf, fbufsize, &p);
+#else
 	p = getpwuid (uid);
+#endif
 	if (p) {
 		gint32 sz = strlen (p->pw_name);
 		if (buffer) {
@@ -35,12 +49,15 @@ extern gboolean GetUserName (gchar *buffer, gint32 *size)
 			strncpy (buffer, p->pw_name, sz);
 		}
 		*size = sz;
-		return 1;
+		return TRUE;
 	}
 
-	// note: getpwuid return static data - no free here
+#ifdef HAVE_GETPWUID_R
+	g_free (pbuf);
+	g_free (fbuf);
+#endif
 	*size = 0;
 	SetLastError (ERROR_INVALID_HANDLE);
-	return 0;
+	return FALSE;
 }
 
