@@ -1,3 +1,8 @@
+2004-04-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* config.h.in: added HAVE_GETPWUID_R
+	* configure.in: check for getpwuid_r.
+
 2004-03-23  Zoltan Varga  <vargaz@freemail.hu>
 
 	* configure.in: Fix GNU ld check.
